save before pulling master; an issue w cropping d3 appeared

--- a/src/app/styles/components/d3graph.css
+++ b/src/app/styles/components/d3graph.css
@@ -101,9 +101,9 @@ div.tooltip {
 }
 
 .d3divContainer {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-between; */
 }
 
 .perf-chart-labels {
